Fixed mobile menu alignment and added link to contact form in text

--- a/react-ui/src/styles.css
+++ b/react-ui/src/styles.css
@@ -202,7 +202,6 @@ template {
   text-align: center;
   max-width: 900px;
   margin: auto;
-  padding: 8px; 
 }
 
 p,
